@@ -3,6 +3,7 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - small performance improvements to 'date-time' and 'date' format
             validation
+          - new stringy_numbers option, for validating numbers more loosely
 
 0.569     2023-07-08 23:36:06Z
           - fixed some edge cases with ipv6 format validation
